<resources>
    <string name="app_name">Hwy67</string>
    <string name="widget_name">Hwy67 News Alert</string>

    <string name="navbar_title">Highway67.us</string>
    <string name="navbar_subTitle">Single Source For Local News</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="desc_hwy67_sign">Hwy67 Sign</string>
    <string name="action_search">Search</string>
    <string name="cd_divider">Divider between Headlines</string>
    <string name="cd_headline_photo">1st photo in story</string>
    <string name="action_share">Share</string>
    <string name="default_title">Hwy67 - Front Page</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="title_search">Hwy67 Search</string>
    <string name="search_hint">Search Hwy67</string>
    <string name="no_results">No Results</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Dialog Resources -->
    <string name="dialog_positive">Set</string>
    <string name="dialog_negative">Cancel</string>
    <string name="icon_desc">Application Icon</string>
    <string name="img_desc">California State Route 67</string>

    <!-- Preference Keys -->
    <string name="preference_key_sources" translatable="false">sources</string>
    <string name="preference_key_archive" translatable="false">archive</string>
    <string name="preference_key_size" translatable="false">size</string>
    <string name="preference_key_sync" translatable="false">sync</string>
    <string name="preference_key_ts" translatable="false">ts</string>
    <string name="preference_key_t0" translatable="false">t0</string>
    <string name="preference_key_t1" translatable="false">t1</string>


    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="search_result">Hwy67 Search Results</string>

    <!-- GCM -->
    <string name="preference_key_insync" translatable="false">in_sync</string>
    <string name="preference_key_demo" translatable="false">demo</string>
    <string name="title_settings">Hwy67 Notification Settings</string>
    <string name="no_updates">No news or updates found</string>
</resources>
